dataset1235/2025-2/610742602/users/1997662715/executions/677928262_2667036473.log
== RUN (2025-08-27 19:19:25)
-- CODE: 
x = -40.0
print( -40.0 ) 
x, 2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:27:09)
-- CODE: 
x = -40.0
y = 233.15
print(round( x, 2 ))
print( y =   )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:11:02)
-- CODE: 
print( x = y )
print(round( x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:15:56)
-- CODE: 
print(round(273.15 - 233.15))
print(round( -40,  2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:01)
-- CODE: 
x = -40.0
print(round( 233.15 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:39)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:40)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:40)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:29)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:34)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:21:58)
-- CODE: 
x = -40.0
print(round( 233.15 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:38)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:24:30)
-- CODE: 
x = -40.0
y = 233.15
print( x,  2 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0 2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0 2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:19:23)
-- CODE: 
x = -40.0
print( -40.0 ) 
x, 2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:26)
-- CODE: 
x = -40.0

print(round( y =  233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:19:44)
-- CODE: 
x = -40.0
print( -40.0 ) 
print( x, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0 2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0 2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:20:16)
-- CODE: 
x = -40.0
print( -40.0 ) 
print(round( x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:55)
-- CODE: 
x = -40.0
y = 233.15


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:20:18)
-- CODE: 
x = -40.0
print( -40.0 ) 
print(round( x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:20:18)
-- CODE: 
x = -40.0
print( -40.0 ) 
print(round( x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:12:12)
-- CODE: 
print( x = y + -40.0 )
print(round( x, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + -40.0 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + -40.0 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + -40.0 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + -40.0 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + -40.0 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + -40.0 )
               ^
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:26)
-- CODE: 
x = -40.0

print(round( y =  233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:14:04)
-- CODE: 
print( 273.15 - 233.15)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
39.99999999999997
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
39.99999999999997
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
39.99999999999997
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
39.99999999999997
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
39.99999999999997
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
39.99999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:19:26)
-- CODE: 
x = -40.0
print( -40.0 ) 
x, 2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:18:49)
-- CODE: 
x = -40.0
 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:11:00)
-- CODE: 
print( x = y )
print(round( x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:18:35)
-- CODE: 
x = -40.0
print(round(273.15 - 233.15))
print(round( )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round( )) 
          ^^^^^^^^
TypeError: round() missing required argument 'number' (pos 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round( )) 
          ^^^^^^^^
TypeError: round() missing required argument 'number' (pos 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round( )) 
          ^^^^^^^^
TypeError: round() missing required argument 'number' (pos 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round( )) 
          ^^^^^^^^
TypeError: round() missing required argument 'number' (pos 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round( )) 
          ^^^^^^^^
TypeError: round() missing required argument 'number' (pos 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round( )) 
          ^^^^^^^^
TypeError: round() missing required argument 'number' (pos 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:15:35)
-- CODE: 
print(round(273.15 - 233.15))
print(round( 40, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:11:30)
-- CODE: 
print( x = y + 273.15 )
print(round( x, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + 273.15 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + 273.15 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + 273.15 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + 273.15 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + 273.15 )
               ^
NameError: name 'y' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y + 273.15 )
               ^
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:16:31)
-- CODE: 
print(round(273.15 - 233.15))
print(round( x, 40))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round( x, 40))
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round( x, 40))
                 ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round( x, 40))
                 ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round( x, 40))
                 ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round( x, 40))
                 ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round( x, 40))
                 ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:27)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:35:56)
-- CODE: 
float(input( -40.0)) 
print(round(233.15, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:23)
-- CODE: 
x = -40.0

print(round( y =  233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:14)
-- CODE: 
x = -40.0

print(round( y =  233.15, 2 )) 
print(round( ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:14:26)
-- CODE: 
print(round(273.15 - 233.15))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:15:56)
-- CODE: 
print(round(273.15 - 233.15))
print(round( -40,  2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:16:44)
-- CODE: 
print(round(273.15 - 233.15))
print(round( 2, 40))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:35:57)
-- CODE: 
float(input( -40.0)) 
print(round(233.15, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:15:54)
-- CODE: 
print(round(273.15 - 233.15))
print(round( -40,  2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:10:24)
-- CODE: 
print( x = y )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print( x = y )
               ^
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:35:16)
-- CODE: 
float(input( -40.0 ))
kelvin = celsius + 273.15
print(round(233.15, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round(233.15, 2 )
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:15:45)
-- CODE: 
print(round(273.15 - 233.15))
print(round( -40, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:24:58)
-- CODE: 
x = -40.0
y = 233.15
print(round( x, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:24:14)
-- CODE: 
x = -40.0
y = 233.15
print( x, 2 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0 2
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0 2
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:54)
-- CODE: 
x = -40.0
y = 233.15


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:08)
-- CODE: 
x = -40.0
print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:18:47)
-- CODE: 
x = -40.0
 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:27:08)
-- CODE: 
x = -40.0
y = 233.15
print(round( x, 2 ))
print( y =   )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 4
    print( y =   )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:26)
-- CODE: 
x = -40.0

print(round( y =  233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round( y =  233.15, 2 )) 
                                ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:22:29)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:23:31)
-- CODE: 
x = -40.0

print(round( 233.15, 2 )) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
233.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
233.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
233.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
233.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:19:07)
-- CODE: 
x = -40.0
print( -40.0 ) 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
-40.0
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
-40.0
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
-40.0
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
-40.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:15:32)
-- CODE: 
print(round(273.15 - 233.15))
print(round( 40, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
40
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
40
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
40
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
40
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:21)
-- CODE: 
tempc = float(input( "temperatura em celsius: " ))
tempk = tempc + 273.15
print(round(tempk, 2 ))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura em celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
